# Injection-Galore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Headers/: config.h  decryption.h  encryption.h  enumeration.h  error.h  hashtable.h  info.h  payloads.h
Injection Methods/: dll_injection.c  dll_injection.h  local_pe_injection.h  remote_mapping.c  remote_mapping.h  remote_shellcode.c  remote_shellcode.h
Payloads/: payloads.c  payloads.h
Structs/: nt_structs.h  structs.h
Syscall/: direct_syscall.c  direct_syscall.h  ds.asm  ids.asm  indirect_syscall.c  indirect_syscall.h
dll/: dll.c  dll.h  injectDll.exp
enumeration/: enumeration.c  processes.h  registry.h  services.h
src/: main.c
temp/: reflective_dll_injection.c  reflective_dll_injection.h
